deploy/metrics-demo/metrics-demo-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metricsdemo
  namespace: dev
  annotations:
    flux.weave.works/tag.podinfod: semver:>3.1.0
    flux.weave.works/automated: 'true'
spec:
  replicas: 3
  selector:
    matchLabels:
      app: metricsdemo
  template:
    metadata:
      labels:
        app: metricsdemo
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: metricsdemod
        image: quay.io/brice/metrics-demo:v4-subscription-service
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: metricsdemo
  namespace: dev
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: metricsdemo
